<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">table</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="bt1">one</string>
    <string name="bt2">two</string>
    <string name="bt3">three</string>
    <string name="bt4">four</string>
    <string name="bt5">five</string>
    <string name="text1">text1</string>

</resources>
